# GearGap

./: .gitignore  CLAUDE.md  PRD 작성단계.md  PRD.md  README.md  item_Recommender.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 004b09dd9606_drop_item_id_fk_add_item_name_to_.py  005_add_icon_url_to_items.py  006_add_name_kr_to_encounters.py  007_drop_item_id_fk_from_character_equipment.py  01cd55c4ba38_init_v0_6_schema.py  50a67e541212_add_encounters_refactor_content_.py  b005182f85d9_add_spec_slot_item_popularity_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/constants/: inventory_types.py  specs.py
backend/data/: murlok_smoke_test_results.json
backend/scripts/: analyze_json.py  check_db.py  check_instances.py  check_schema.py  compare_slots.py  fetch_item_icons.py  insert_patch_version.py  poc_blizzard.py  poc_blizzard_leaderboard.py  poc_inv_minus1.py  poc_inventory_types.py  poc_murlok.py  poc_murlok2.py  poc_murlok3.py  poc_murlok4.py  poc_murlok_diag.py  poc_murlok_trinket.py  poc_murlok_verify.py  poc_raidbots.py  poc_raidbots_items.py  poc_raidbots_items2.py  poc_raidbots_type.py  poc_raiderio.py  poc_raiderio2.py  poc_raiderio3.py  poc_slot_mapping.py  reset_alembic_version.py  run_murlok_ingestion.py  run_raidbots_ingestion.py  sanity_check.py  seed_content_name_kr.py  seed_encounter_name_kr.py  smoke_test_murlok.py  test_murlok_scraper.py  verify_ingestion.py  verify_migration3.py  verify_migration3b.py
(+99 files in other folders)
