[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geargap-api"
version = "0.1.0"
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.21",
    "psycopg[binary]>=3.1.13",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
strict = true
